Rework browser intro and about pages